<?xml version="1.0"?>
<package>
  <name>bcap_core</name>
  <version>2.0.0</version>
  <description>b-CAP core library package</description>

  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
