<?xml version="1.0"?>
<package>
  <name>bcap_core</name>
  <version>3.1.1</version>
  <description>The bcap core package includes libraries for communicating ORiN via b-CAP (Binary - Controller Access Protocol) protocol.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/bcap_core</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
