<?xml version="1.0"?>
<package>
  <name>bcap_core</name>
  <version>4.0.0</version>
  <description>The bcap core package includes libraries for communicating ORiN via b-CAP (Binary - Controller Access Protocol) protocol.</description>
  <maintainer email="d.chen@srd.mech.tohoku.ac.jp">Dayuan Chen</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/bcap_core</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
