<?xml version="1.0"?>
<package>
  <name>bcap_service</name>
  <version>3.1.2</version>
  <description>The bcap service package includes a node for communicating ORiN from ROS.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/bcap_service</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bcap_core</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>bcap_core</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
