<?xml version="1.0"?>
<package>
  <name>bcap_service_test</name>
  <version>3.0.0</version>
  <description>b-CAP service test package</description>

  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>bcap_service</build_depend>
  <run_depend>roscpp</run_depend>
</package>
