<?xml version="1.0"?>
<package>
  <name>bcap_service_test</name>
  <version>3.1.0</version>
  <description>The bcap service test package includes a node for testing bcap service node.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/bcap_service_test</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bcap_service</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
