<?xml version="1.0"?>
<package>
  <name>denso_robot_bringup</name>
  <version>2.0.0</version>
  <description>DENSO robot bringup package</description>

  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
