<?xml version="1.0"?>
<package>
  <name>denso_robot_bringup</name>
  <version>3.1.0</version>
  <description>The denso robot bringup package includes launch files for starting denso robot nodes.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_bringup</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
