<?xml version="1.0"?>
<package>
  <name>denso_robot_control</name>
  <version>3.1.2</version>
  <description>The denso robot control package includes a node for controlling DENSO robot controllers with MoveIt!.</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_control</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bcap_core</build_depend>
  <build_depend>bcap_service</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>denso_robot_core</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <run_depend>bcap_core</run_depend>
  <run_depend>bcap_service</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>denso_robot_core</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
</package>
